--- a/main.css
+++ b/main.css
@@ -28,11 +28,12 @@ h1 {
 }
 
 h2 {
-  float:left;
+  text-align: center;
+  
 }
 
 .button {
-    float:left;
+    margin: auto;
     width:200px;
     height:100px;
     font-size:24px;
@@ -40,9 +41,10 @@ h2 {
     text-decoration:none;
     display:block;
     text-align:center;
-    padding:8px 0 10px;
+    padding-top: 10px;
     color:#fff;
     background-color:#49a9d4;
     border-radius:5px;
     box-shadow:2px 2px #1a6ea0;
+    
 }
